--- a/ventedete/style.css
+++ b/ventedete/style.css
@@ -7,17 +7,25 @@ body {
 
 button:hover {
     cursor: pointer;
+    -webkit-transition: all ease-in-out .2s;
+    -o-transition: all ease-in-out .2s;
     transition: all ease-in-out .2s;
 }
 
 #slider {
+    -webkit-writing-mode: vertical-lr;
+    -ms-writing-mode: bt-lr;
     writing-mode: vertical-lr;
     direction: rtl;
+    -webkit-appearance: slider-vertical;
+    -moz-appearance: slider-vertical;
     appearance: slider-vertical;
 
     position: fixed;
     right: 10px;
     top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     z-index: 999;
 }
@@ -33,27 +41,44 @@ button:hover {
     z-index: 3;
     width: 100vw;
     height: calc(100vh - 140px);
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
 .object div {
     padding: 0.5rem;
     gap: 10px;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
     position: absolute;
     width: 100vw;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     top: 0;
 }
 
 .object>div>span {
     font-size: 4rem;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
     max-width: 700px;
     font-weight: 900;
@@ -77,10 +102,15 @@ button:hover {
 .object img {
     height: 100%;
     max-width: 100%;
+    -o-object-fit: contain;
     object-fit: contain;
     z-index: 80;
+    -webkit-transform: translateX(100%);
+    -ms-transform: translateX(100%);
     transform: translateX(100%);
     opacity: 1 !important;
+    -webkit-transition: all ease-in-out .2s;
+    -o-transition: all ease-in-out .2s;
     transition: all ease-in-out .2s;
 
     user-drag: none;
@@ -92,14 +122,22 @@ button:hover {
 }
 
 .imageMove {
+    -webkit-transform: translateX(0) !important;
+    -ms-transform: translateX(0) !important;
     transform: translateX(0) !important;
     opacity: 1 !important;
+    -webkit-transition: all ease-in-out .2s;
+    -o-transition: all ease-in-out .2s;
     transition: all ease-in-out .2s;
 }
 
 .imageGo {
+    -webkit-transform: translateX(-100%) !important;
+    -ms-transform: translateX(-100%) !important;
     transform: translateX(-100%) !important;
     opacity: 0;
+    -webkit-transition: all ease-in-out .2s;
+    -o-transition: all ease-in-out .2s;
     transition: all ease-in-out .2s;
 }
 
@@ -113,10 +151,16 @@ button:hover {
     bottom: 0rem;
     left: 0;
     z-index: 3;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     width: 100vw;
     padding: 0.5rem;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     gap: 10px;
 }
@@ -130,11 +174,15 @@ button:hover {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
 .arrow span {
     font-size: 3rem;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
     font-weight: 900;
     color: white;
@@ -152,8 +200,14 @@ button:hover {
     background-color: transparent;
     border: none;
     height: 70px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     border-radius: 4px;
     text-decoration: none;
@@ -181,11 +235,21 @@ button {
     text-decoration: none;
     font-size: 1rem;
     border: 1px solid grey;
+    -webkit-transition: all ease-in-out .2s;
+    -o-transition: all ease-in-out .2s;
     transition: all ease-in-out .2s;
     text-align: center;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -205,6 +269,7 @@ video {
     width: 100vw;
     top: 0;
     background-color: red;
+    -o-object-fit: cover;
     object-fit: cover;
 }
 
@@ -215,6 +280,7 @@ video {
     width: 100vw;
     top: 0;
     /* background-color: blue; */
+    -o-object-fit: cover;
     object-fit: cover;
 
     /* background-image: url(media/bg-sol.JPG); */
@@ -223,8 +289,15 @@ video {
 }
 
 .backgrounds {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     gap: 12px;
     z-index: 200;
@@ -232,6 +305,8 @@ video {
     padding: 12px;
     right: 0;
     top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
 
