--- a/pab2ams/style.css
+++ b/pab2ams/style.css
@@ -26,39 +26,8 @@ p {
     margin: 0;
 }
 
-img {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    display: block;
 
-    width: 150px;
-    transform: translate(20%, 20%) rotate(8deg);
-
-    height: fit-content;
-    transition: all .5s ease-in-out;
-}
-
-img:hover {
-    width: 400px;
-    transform: translate(20%, 20%) rotate(0deg);
-    transition: all .5s ease-in-out;
-}
-
-
-button {
-    border-radius: 999px;
-    padding: 12px 16px;
-    border: 1px solid rgb(185, 185, 185);
-    font-size: 18px;
-    display: block;
-    width: fit-content;
-}
-
-button:hover {
-    cursor: pointer;
-}
-
+/************** CARNET ***************/
 .carnet {
     position: relative;
     background-color: white;
@@ -74,31 +43,83 @@ button:hover {
     background-position: center; */
 }
 
-.wish {
-    background-color: #e0e0e3;
-    width: 400px;
-    padding: 14px;
-    border-radius: 14px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-textarea {
-    font-size: 18px;
-    line-height: 1.4;
-
-    resize: none;
-    height: 100px;
-
-    padding: 10px;
-    border: none;
-    border-radius: 12px;
-}
-
-
+/************** CONTACT ***************/
 .contacts {
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+/************** BUTTONS ***************/
+button {
+    border-radius: 999px;
+    padding: 12px 16px;
+    border: 1px solid rgb(185, 185, 185);
+    font-size: 18px;
+    display: block;
+    width: fit-content;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+a,
+a:visited,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    width: fit-content;
+}
+
+/************** IMAGE ***************/
+.pablo {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    width: 150px;
+    transform: translate(20%, 20%) rotate(8deg);
+    height: fit-content;
+    transition: all .5s ease-in-out;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.pablo:hover {
+    width: 400px;
+    transform: translate(20%, 20%) rotate(0deg);
+    transition: all .5s ease-in-out;
+}
+
+img {
+    width: 100%;
+}
+
+#luck {
+    position: absolute;
+    font-size: 2rem;
+    font-weight: 600;
+    transform: translateY(20px);
+    opacity: 0;
+
+    color: #6ed322;
+    animation: goodluck 1s ease-in-out;
+}
+
+@keyframes goodluck {
+    0% {
+        opacity: 0;
+        transform: scale(1) translateY(20px);
+    }
+
+    60% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        transform: scale(1.1) translateY(-10px);
+    }
 }
