--- a/pablo-to-ams/style.css
+++ b/pablo-to-ams/style.css
@@ -32,7 +32,7 @@ p {
     padding: 2rem;
     border-radius: 23px;
     box-sizing: border-box;
-    max-width: 450px;
+    max-width: 100%;
     gap: 23px;
     border: 1px solid rgb(185, 185, 185);
 
@@ -42,6 +42,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 450px;
 }
 
 .carnet div {
@@ -66,6 +67,7 @@ button {
     width: fit-content;
 
     font-size: 18px;
+    color: black;
 }
 
 button:hover {
