--- a/pablo-in-ams/style.css
+++ b/pablo-in-ams/style.css
@@ -66,6 +66,8 @@ button {
     padding: 12px 16px;
     border: 1px solid rgb(185, 185, 185);
     display: block;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
 
     font-size: 18px;
@@ -82,13 +84,19 @@ a:visited,
 a:focus {
     color: inherit;
     text-decoration: none;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
 }
 
 /************** IMAGE ***************/
 .pablo {
     display: flex;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     transition: all .5s ease-in-out;
     justify-content: center;
@@ -109,7 +117,24 @@ img {
     opacity: 0;
 
     color: #6ed322;
+    -webkit-animation: goodluck 1s ease-in-out;
     animation: goodluck 1s ease-in-out;
+}
+
+@-webkit-keyframes goodluck {
+    0% {
+        opacity: 0;
+        transform: scale(1) translateY(10px);
+    }
+
+    60% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        transform: scale(1.1) translateY(-30px);
+    }
 }
 
 @keyframes goodluck {
