--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -30,8 +30,26 @@ p {
   display: flex;
   gap: 2px;
   justify-content: center;
+  font-size: 80%;
 }
 
+.contact {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  color: gray;
+
+}
+
+a {
+  color: inherit;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
 
 video {
   width: 100%;
@@ -39,7 +57,9 @@ video {
   aspect-ratio: 5/3;
   object-fit: cover;
   margin-bottom: 20px;
+  transition: all .5s ease-in-out;
 }
+
 
 
 .sites {
@@ -66,6 +86,7 @@ video {
   max-width: 90vw;
   flex-wrap: wrap;
   justify-content: center;
+  font-size: 80%;
 }
 
 .list select {
@@ -82,7 +103,7 @@ video {
 }
 
 #wip {
-  width: 15px;
+  width: 20px;
   display: inline-block;
   text-align: left;
 }
