--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
   display: flex;
   align-items: center;
