--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,18 +10,21 @@ body {
   font-family: sans-serif;
   text-align: center;
 
-  background-color: seagreen;
+  background-color: forestgreen;
   color: blanchedalmond;
   padding: 20px;
 }
 
+
 a {
-  color: var(--thisColor);
   text-decoration: none;
+  color: #69aa5d;
+  transition: all .3s ease-in-out;
 }
 
 a:hover {
-  text-decoration: underline;
+  color: blanchedalmond;
+  transition: all .3s ease-in-out;
 }
 
 .text {
@@ -40,6 +43,12 @@ a:hover {
   overflow: hidden;
   transition: all .6s cubic-bezier(0.39, 0.575, 0.565, 1);
   border: 2px solid blanchedalmond;
+}
+
+iframe,
+gm-style {
+  overflow: hidden;
+  border-radius: 25px;
 }
 
 
