--- a/puzzle/assets/css/style.css
+++ b/puzzle/assets/css/style.css
@@ -73,6 +73,14 @@ body {
     gap: 0px;
     box-sizing: border-box;
     background-color: black;
+    transition: all 1s ease-in-out;
+
+}
+
+.forzudoOpen {
+    filter: blur(5px);
+    transition: all 1s ease-in-out;
+
 }
 
 .card {
