--- a/puzzle/assets/css/style.css
+++ b/puzzle/assets/css/style.css
@@ -8,6 +8,17 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.3rem;
+}
+
+a {
+    color: white;
+}
+
+a:hover {
+    text-decoration: none;
 }
 
 .pointer {
