--- a/puzzle/assets/css/style.css
+++ b/puzzle/assets/css/style.css
@@ -72,8 +72,10 @@ a:hover {
 }
 
 .boxOpen {
-    height: 300%;
+    height: 100%;
     transition: all 1s ease-in-out;
+    overflow: scroll;
+    padding: 0 0 50px 0;
 }
 
 .forzudo {
@@ -91,7 +93,7 @@ a:hover {
 .forzudoOpen {
     filter: blur(5px);
     transition: all 1s ease-in-out;
-
+    height: 30vh;
 }
 
 .card {
