--- a/puzzle/assets/css/style.css
+++ b/puzzle/assets/css/style.css
@@ -1,20 +1,25 @@
+:root {
+
+    --texto: black;
+    --fondo: whitesmoke;
+    --ok: lime;
+    --nook: red;
+}
+
 body {
-    background-color: aliceblue;
+    background-color: var(--fondo);
     margin: 0;
     padding: 0;
     height: calc(var(--vh, 1vh) * 100);
     overflow: hidden;
-    /* Prevents scroll issues */
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.3rem;
 }
 
 a {
-    color: white;
+    color: var(--texto);
+    /*! color: var(--fondo); */
 }
 
 a:hover {
@@ -25,57 +30,101 @@ a:hover {
     cursor: pointer;
 }
 
+header {
+    font-size: 80%;
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 10px;
+    border-bottom: 1px solid var(--texto);
+    align-items: center;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: var(--fondo);
+}
+
+header span {
+    letter-spacing: 4px;
+}
+
+.nav {
+    position: fixed;
+    bottom: 0;
+    padding: 20px;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    transition: all 1s ease-in-out;
+}
+
+.navOpen {
+    height: 15vh;
+    bottom: calc(100vh - 15vh);
+    transition: all 1s ease-in-out;
+
+}
+
+
 .info {
-    width: 40px !important;
-    height: 40px !important;
-    aspect-ratio: 1 !important;
-    background-color: black !important;
-    color: white !important;
-    border-radius: 100% !important;
+    background-color: var(--fondo) !important;
+    color: var(--texto) !important;
+    border-radius: 11px !important;
     display: flex !important;
     justify-content: center !important;
     align-items: center !important;
-    position: fixed !important;
-    bottom: 20px !important;
-    left: 20px !important;
-    z-index: 999 !important;
     cursor: cell !important;
-    border: none !important;
+    /*! border: none !important; */
+    padding: 0 40px;
+    height: 40px !important;
+    width: -webkit-fit-content !important;
+    width: -moz-fit-content !important;
+    width: fit-content !important;
 }
 
 .info .front {
-    border-radius: 100% !important;
-    background-color: black !important;
-    /* border: 1px solid white !important; */
+    border-radius: 11px !important;
+    background-color: var(--texto) !important;
+    color: var(--fondo) !important;
 }
 
 .info .back {
-    border-radius: 100% !important;
+    border-radius: 11px !important;
     transform: rotateY(180deg);
-    background-color: red !important;
+    background-color: var(--fondo) !important;
+    color: var(--texto) !important;
 }
 
 
 .box {
-    background-color: black;
+    /*! background-color: var(--fondo); */
     height: 0;
-    color: white;
+    color: var(--texto);
     transition: all 1s ease-in-out;
-
+    max-width: 700px;
+    margin: auto;
     /* border-radius: 20px;
     margin: 10px; */
 }
 
 .box p {
-    margin: 20px;
+    margin: 10px;
     font-size: 2rem;
 }
 
+.emoji {
+    line-height: 1.3;
+}
+
 .boxOpen {
-    height: 100%;
-    transition: all 1s ease-in-out;
+    height: 85vh;
+    /*! transition: all 1s ease-in-out; */
     overflow: scroll;
     padding: 0 0 50px 0;
+
+    z-index: 999;
+    position: relative;
 }
 
 .forzudo {
@@ -85,12 +134,12 @@ a:hover {
     grid-template-columns: repeat(3, 1fr);
     gap: 0px;
     box-sizing: border-box;
-    background-color: black;
     transition: all 1s ease-in-out;
 
 }
 
 .forzudoOpen {
+    -webkit-filter: blur(5px);
     filter: blur(5px);
     transition: all 1s ease-in-out;
     height: 15vh;
@@ -106,16 +155,17 @@ a:hover {
     width: 100%;
     height: 100%;
 
-    border: 0.1px solid gainsboro;
+    /*! border: 0.1px solid gainsboro; */
 }
 
 .card-face {
     width: 100%;
     height: 100%;
     position: absolute;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-
     display: flex;
+    background-color: var(--fondo);
     align-items: center;
     justify-content: center;
 }
@@ -123,18 +173,84 @@ a:hover {
 .card img {
     width: 100%;
     height: 100%;
+    -o-object-fit: fill;
     object-fit: fill;
 }
 
-.front {
-    background-color: aliceblue;
+.card-content img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
 .back {
     transform: rotateY(180deg);
-    background-color: red;
+    background-color: var(--fondo);
+    color: var(--texto);
 }
+
+.fondoCarta {
+    background-color: var(--nook);
+}
+
+.back span {
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 1s ease-in-out !important;
+    color: var(--texto);
+}
+
+.card-face p {
+    padding: 20px;
+    position: absolute;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    /* text-align: initial; */
+    justify-content: center;
+    transition: all 1s ease-in-out !important;
+    color: var(--texto);
+}
+
+.desc {
+    transition: all 1s ease-in-out !important;
+
+}
+
+.desc img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    -o-object-fit: fill;
+    object-fit: fill;
+    z-index: -1;
+    transition: all 1s ease-in-out !important;
+
+}
+
 
 .flipCard {
     transform: rotateY(180deg);
+}
+
+
+.hidden {
+    opacity: 0% !important;
+    transition: all 1s ease-in-out !important;
+}
+
+.okCarta {
+    background-color: var(--ok);
 }
