--- a/puzzle/assets/css/style.css
+++ b/puzzle/assets/css/style.css
@@ -107,14 +107,13 @@ header {
     margin: 10px; */
 }
 
-.emoji {
-    line-height: 1.3;
+p {
+    padding: 10px;
+    font-size: 2rem;
 }
 
 .boxOpen {
     height: calc(var(--vh, 1vh) * 85);
-    ;
-    /*! transition: all 1s ease-in-out; */
     overflow: scroll;
     padding: 0 0 50px 0;
 
@@ -131,6 +130,8 @@ header {
     box-sizing: border-box;
     transition: all 1s ease-in-out;
     font-size: 1rem;
+    border-radius: 20px;
+    overflow: hidden;
 }
 
 .forzudoOpen {
