--- a/pour-alberte/style.css
+++ b/pour-alberte/style.css
@@ -9,41 +9,70 @@ body {
     cursor: pointer;
 }
 
+h1 {
+    font-size: 1.2rem;
+    text-align: center;
+    font-weight: 400;
+    padding: 70px 0;
+}
+
 h3 {
-    margin-bottom: 10px;
+    margin: 0 0 10px 0;
+    font-weight: 400;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+h3 i {
+    color: gray;
 }
 
 p {
-    line-height: 1;
+    line-height: 1.1;
 }
 
-h1 {
-    background-color: #ffffff8a;
-    padding: 7px 20px;
-    border-radius: 999px;
-    font-size: inherit;
-    text-align: center;
+
+small {
+    background-color: black;
+    color: white;
     width: fit-content;
-    font-weight: 400;
     margin: auto;
+    padding: 5px 10px;
+    line-height: 1.2;
+    font-size: 70%;
+    text-align: center;
 }
+
+
 
 .content {
     max-width: 450px;
-    margin: 50px auto;
+    margin: 0 auto 20px auto;
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 0;
 }
 
 .content>div {
-    margin: 0 20px;
+    margin: 0 20px 60px 20px;
 }
 
 .effortCommun {
     height: 100px;
     width: auto;
     object-fit: contain;
+}
+
+
+/*********** MOON ************/
+
+.moon {
+    text-align: center;
+    border-bottom: 1px solid gainsboro;
+    padding: 10px;
+    font-size: 80%;
+    margin: 0 10px !important;
 }
 
 /*********** LETTRE ************/
@@ -77,15 +106,27 @@ iframe {
     position: relative;
     border-radius: 8px;
     overflow: hidden;
+
+    font-family: sans-serif;
 }
 
-.activities span {
+.activities>div span {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     height: auto;
     aspect-ratio: 3/4;
+}
+
+.activities span:nth-child(odd):hover {
+    transform: rotate(5deg);
+    transition: all ease-in-out 0.3s;
+}
+
+.activities span:nth-child(even):hover {
+    transform: rotate(-5deg);
+    transition: all ease-in-out 0.3s;
 }
 
 .activities>div>div {
@@ -102,9 +143,12 @@ iframe {
     display: flex;
 }
 
+.op0 {
+    opacity: 0 !important;
+}
+
+
 /*********** JOURNAL ************/
-
-
 .journal>div>div {
     background-color: white;
     border-top: 1px solid black;
@@ -128,4 +172,69 @@ iframe {
 
 .journal>div>div>p {
     padding: 10px;
+}
+
+/*********** EMBRUJADA ************/
+.embrujada p {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 6px;
+    font-size: 90%;
+}
+
+.embrujada>p span:nth-child(1) {
+    font-family: sans-serif;
+}
+
+
+.embrujada>p span:nth-child(2) {
+    color: gray;
+}
+
+
+
+/*********** IMAGES ************/
+.photos h3 {
+    margin: 0 20px 0 20px;
+}
+
+.photos {
+    margin: 0 0 40px 0 !important;
+}
+
+.main-carousel {
+    width: 100%;
+    aspect-ratio: 3/4;
+    /* overflow: hidden; */
+}
+
+.carousel-cell {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: .3;
+    transition: all .5s ease-in-out;
+    margin-right: 10px;
+}
+
+.carousel-cell.is-selected {
+    opacity: 1;
+    transition: all .5s ease-in-out;
+}
+
+
+.carousel-cell img {
+    height: auto;
+    width: 80%;
+    object-fit: cover;
+    border-radius: 12px;
+    aspect-ratio: 3/4;
+    transform: rotate(-8deg);
+
+}
+
+.carousel-cell:nth-child(odd) img {
+    transform: rotate(8deg);
 }
