--- a/pour-alberte/assets/style.css
+++ b/pour-alberte/assets/style.css
@@ -53,7 +53,7 @@ h3 i {
 }
 
 p {
-    line-height: 1.3 !important;
+    line-height: 1.2 !important;
 }
 
 
@@ -93,6 +93,7 @@ small {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin: auto;
 }
 
 
@@ -184,8 +185,7 @@ small {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    justify-content: center;
-    align-items: center;
+
 }
 
 
