--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,98 +2,56 @@ body {
   margin: 0;
   height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
 
   font-family: sans-serif;
-  text-align: center;
 
-  background-color: saddlebrown;
-  color: rgba(255, 255, 255, 1.00);
+  background-color: whitesmoke;
+  color: black;
   overflow: hidden;
+
+  padding: 10px;
 }
 
 
 a {
-  text-decoration: none;
+  text-decoration: underline;
   transition: all .3s ease-in-out;
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .text {
   display: flex;
   align-items: center;
-  gap: 10px;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-
-.el {
-  opacity: 0;
-  animation: fadeIn 1s ease-in forwards;
-}
-
-.el:nth-child(1) {
-  animation-delay: 0s;
-}
-
-.el:nth-child(2) {
-  animation-delay: 0.5s;
-}
-
-.el:nth-child(3) {
-  animation-delay: 1s;
-}
-
-.el:nth-child(4) {
-  animation-delay: 1.5s;
+  gap: 8px;
 }
 
 
 img {
   position: absolute;
-  height: 120px;
-  width: 150px;
-  border-radius: 30px;
-  object-fit: cover;
-  bottom: 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  aspect-ratio: 4/3;
+  object-fit: contain;
   transition: all .5s cubic-bezier(.45, .05, .55, .95);
 }
 
 img:hover {
-  cursor: pointer;
-  transform: scale(1.05);
+  width: 90%;
+  /* transform: translate(-50%, -50%) scale(5); */
+  transition: all 5s cubic-bezier(.45, .05, .55, .95);
 }
 
-
-
-
-.fullImg {
-  border-radius: 0;
-  height: calc(var(--vh, 1vh) * 100 - 40px);
-  width: calc(100vw - 40px);
-  transition: all .5s cubic-bezier(.45, .05, .55, .95);
-}
 
 
 
 @media screen and (max-width: 700px) {
-
-  .fullImg {
-    height: calc(var(--vh, 1vh) * 100 - 20px);
-    width: calc(100vw - 20px);
-  }
-
   .text {
     flex-direction: column;
     justify-content: center;
@@ -101,6 +59,6 @@ img:hover {
   }
 
   img {
-    bottom: 10px;
+    max-width: 90%;
   }
 }
