--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,7 +9,7 @@ body {
   color: black;
   overflow: hidden;
 
-  padding: 10px;
+  padding: 10px 15px;
 }
 
 
@@ -39,22 +39,27 @@ img {
   width: 300px;
   aspect-ratio: 4/3;
   object-fit: contain;
-  transition: all .5s cubic-bezier(.45, .05, .55, .95);
+  transition: all 1s cubic-bezier(.45, .05, .55, .95);
 }
 
 img:hover {
-  width: 90%;
+  width: calc(100% - 30px);
   /* transform: translate(-50%, -50%) scale(5); */
-  transition: all 5s cubic-bezier(.45, .05, .55, .95);
+  transition: all 7s cubic-bezier(.45, .05, .55, .95);
 }
 
 
 
 
 @media screen and (max-width: 700px) {
+  body {
+    padding: 15px 20px;
+  }
+
   .text {
     flex-direction: column;
-    justify-content: center;
+    align-items: start;
+    width: fit-content;
     gap: 0;
   }
 
