--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -37,6 +37,7 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 300px;
+  max-height: calc(100% - 20px);
   aspect-ratio: 4/3;
   object-fit: contain;
   transition: all 1s cubic-bezier(.45, .05, .55, .95);
@@ -54,6 +55,12 @@ img:hover {
 @media screen and (max-width: 700px) {
   body {
     padding: 15px 20px;
+  }
+
+  img:hover {
+    width: calc(100% - 0px);
+    /* transform: translate(-50%, -50%) scale(5); */
+    transition: all 7s cubic-bezier(.45, .05, .55, .95);
   }
 
   .text {
