--- a/nexthouse/index.css
+++ b/nexthouse/index.css
@@ -12,6 +12,7 @@
         body {
             margin: 0;
             font-size: 20px;
+            font-weight: 400;
             font-family: sans-serif;
             padding: 24px 20px;
             box-sizing: border-box;
@@ -24,7 +25,7 @@
 
         h1 {
             margin: 0;
-            font-weight: 400;
+            font-weight: 600;
             line-height: 90%;
             font-size: 30px;
         }
@@ -64,6 +65,7 @@
             background-color: inherit;
             border-bottom: 1px solid black;
             padding: 10px 0;
+            border-radius: 0;
         }
 
         button {
@@ -75,6 +77,7 @@
             padding: 8px 10px;
             border-radius: 10px;
             margin-top: 10px;
+            color: black;
             background-color: #c5c5c5;
         }
 
