--- a/nieuwe/assets/css/input.css
+++ b/nieuwe/assets/css/input.css
@@ -2,6 +2,9 @@
 
 @theme {
     --shadow-big: 4px 4px 20px rgba(0, 0, 0, 0.2);
+
+    --color-grey: rgb(170, 170, 170, 0.8);
+    --color-black: #303030;
 }
 
 @layer base {
