--- a/nieuwe/assets/css/output.css
+++ b/nieuwe/assets/css/output.css
@@ -9,7 +9,6 @@
       "Courier New", monospace;
     --color-purple-500: oklch(62.7% 0.265 303.9);
     --color-zinc-200: oklch(92% 0.004 286.32);
-    --color-zinc-300: oklch(87.1% 0.006 286.286);
     --color-black: #303030;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -17,19 +16,15 @@
     --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
-    --text-2xl: 1.5rem;
-    --text-2xl--line-height: calc(2 / 1.5);
     --font-weight-semibold: 600;
     --leading-tight: 1.25;
-    --radius-xs: 0.125rem;
-    --radius-sm: 0.25rem;
-    --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --color-grey: rgb(170, 170, 170, 0.8);
+    --color-grad-black: rgb(0, 0, 0, .3);
   }
 }
 @layer base {
@@ -181,6 +176,12 @@
   }
 }
 @layer utilities {
+  .pointer-events-auto {
+    pointer-events: auto;
+  }
+  .pointer-events-none {
+    pointer-events: none;
+  }
   .absolute {
     position: absolute;
   }
@@ -195,12 +196,6 @@
   }
   .top-0 {
     top: calc(var(--spacing) * 0);
-  }
-  .top-2 {
-    top: calc(var(--spacing) * 2);
-  }
-  .top-4 {
-    top: calc(var(--spacing) * 4);
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -217,8 +212,8 @@
   .z-10 {
     z-index: 10;
   }
-  .m-0 {
-    margin: calc(var(--spacing) * 0);
+  .z-50 {
+    z-index: 50;
   }
   .m-2 {
     margin: calc(var(--spacing) * 2);
@@ -235,23 +230,8 @@
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
-  .mt-6 {
-    margin-top: calc(var(--spacing) * 6);
-  }
-  .mt-8 {
-    margin-top: calc(var(--spacing) * 8);
-  }
-  .mb-10 {
-    margin-bottom: calc(var(--spacing) * 10);
-  }
   .mb-12 {
     margin-bottom: calc(var(--spacing) * 12);
-  }
-  .mb-16 {
-    margin-bottom: calc(var(--spacing) * 16);
-  }
-  .mb-20 {
-    margin-bottom: calc(var(--spacing) * 20);
   }
   .block {
     display: block;
@@ -265,8 +245,14 @@
   .hidden {
     display: none;
   }
-  .inline-block {
-    display: inline-block;
+  .aspect-\[1\/1\] {
+    aspect-ratio: 1/1;
+  }
+  .aspect-square {
+    aspect-ratio: 1 / 1;
+  }
+  .h-\[25px\] {
+    height: 25px;
   }
   .h-fit {
     height: fit-content;
@@ -274,17 +260,14 @@
   .h-full {
     height: 100%;
   }
-  .w-9 {
-    width: calc(var(--spacing) * 9);
-  }
-  .w-\[20px\] {
-    width: 20px;
-  }
   .w-\[80px\] {
     width: 80px;
   }
   .w-\[500px\] {
     width: 500px;
+  }
+  .w-auto {
+    width: auto;
   }
   .w-fit {
     width: fit-content;
@@ -292,32 +275,24 @@
   .w-full {
     width: 100%;
   }
-  .max-w-\[95\%\] {
-    max-width: 95%;
-  }
-  .max-w-\[100\%-8px\] {
-    max-width: 100%-8px;
-  }
-  .max-w-\[100\%\] {
-    max-width: 100%;
-  }
-  .max-w-\[100vw-8px\] {
-    max-width: 100vw-8px;
-  }
-  .max-w-\[100vw-16px\] {
-    max-width: 100vw-16px;
-  }
   .max-w-\[calc\(100vw-16px\)\] {
     max-width: calc(100vw - 16px);
   }
   .max-w-full {
     max-width: 100%;
   }
-  .max-w-max {
-    max-width: max-content;
+  .translate-y-\[100\%\] {
+    --tw-translate-y: 100%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
+  }
+  .cursor-alias {
+    cursor: alias;
+  }
+  .cursor-cell {
+    cursor: cell;
   }
   .cursor-pointer {
     cursor: pointer;
@@ -328,26 +303,23 @@
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+  .grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(0, 1fr));
+  }
   .flex-col {
     flex-direction: column;
   }
   .items-end {
     align-items: flex-end;
   }
-  .items-start {
-    align-items: flex-start;
-  }
   .justify-between {
     justify-content: space-between;
-  }
-  .justify-start {
-    justify-content: flex-start;
   }
   .gap-0 {
     gap: calc(var(--spacing) * 0);
   }
-  .gap-1\.5 {
-    gap: calc(var(--spacing) * 1.5);
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
@@ -355,20 +327,11 @@
   .gap-4 {
     gap: calc(var(--spacing) * 4);
   }
-  .gap-5 {
-    gap: calc(var(--spacing) * 5);
-  }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
-  }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
-  }
-  .gap-20 {
-    gap: calc(var(--spacing) * 20);
   }
   .overflow-hidden {
     overflow: hidden;
@@ -379,25 +342,12 @@
   .rounded-\[6px\] {
     border-radius: 6px;
   }
-  .rounded-lg {
-    border-radius: var(--radius-lg);
-  }
-  .rounded-sm {
-    border-radius: var(--radius-sm);
-  }
   .rounded-xl {
     border-radius: var(--radius-xl);
-  }
-  .rounded-xs {
-    border-radius: var(--radius-xs);
   }
   .rounded-t-full {
     border-top-left-radius: calc(infinity * 1px);
     border-top-right-radius: calc(infinity * 1px);
-  }
-  .rounded-l-lg {
-    border-top-left-radius: var(--radius-lg);
-    border-bottom-left-radius: var(--radius-lg);
   }
   .bg-\[\#F9F9F9\] {
     background-color: #F9F9F9;
@@ -405,20 +355,26 @@
   .bg-\[\#FAF5A2\] {
     background-color: #FAF5A2;
   }
-  .bg-\[F9F9F9\] {
-    background-color: F9F9F9;
-  }
   .bg-black {
     background-color: var(--color-black);
   }
   .bg-purple-500 {
     background-color: var(--color-purple-500);
   }
-  .bg-white {
-    background-color: var(--color-white);
+  .bg-linear-to-b {
+    --tw-gradient-position: to bottom;
+    @supports (background-image: linear-gradient(in lab, red, red)) {
+      --tw-gradient-position: to bottom in oklab;
+    }
+    background-image: linear-gradient(var(--tw-gradient-stops));
   }
-  .bg-zinc-200 {
-    background-color: var(--color-zinc-200);
+  .from-grad-black {
+    --tw-gradient-from: var(--color-grad-black);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-transparent {
+    --tw-gradient-to: transparent;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .object-cover {
     object-fit: cover;
@@ -429,24 +385,11 @@
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
-  .p-3 {
-    padding: calc(var(--spacing) * 3);
-  }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
-  }
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
   }
-  .pr-6 {
-    padding-right: calc(var(--spacing) * 6);
-  }
   .pb-20 {
     padding-bottom: calc(var(--spacing) * 20);
-  }
-  .text-2xl {
-    font-size: var(--text-2xl);
-    line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
   .text-lg {
     font-size: var(--text-lg);
@@ -473,20 +416,11 @@
   .text-white {
     color: var(--color-white);
   }
-  .text-zinc-300 {
-    color: var(--color-zinc-300);
-  }
   .opacity-0 {
     opacity: 0%;
   }
-  .opacity-30 {
-    opacity: 30%;
-  }
   .opacity-40 {
     opacity: 40%;
-  }
-  .opacity-100 {
-    opacity: 100%;
   }
   .blur {
     --tw-blur: blur(8px);
@@ -507,25 +441,21 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
-  .transition-transform {
-    transition-property: transform, translate, scale, rotate;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
   .duration-200 {
     --tw-duration: 200ms;
     transition-duration: 200ms;
+  }
+  .duration-300 {
+    --tw-duration: 300ms;
+    transition-duration: 300ms;
   }
   .duration-400 {
     --tw-duration: 400ms;
     transition-duration: 400ms;
   }
-  .ease-\[cubic-bezier\(0\.60\,0\,0\,1\)\] {
-    --tw-ease: cubic-bezier(0.60,0,0,1);
-    transition-timing-function: cubic-bezier(0.60,0,0,1);
-  }
-  .will-change-transform {
-    will-change: transform;
+  .duration-600 {
+    --tw-duration: 600ms;
+    transition-duration: 600ms;
   }
   .group-hover\:text-grey {
     &:is(:where(.group):hover *) {
@@ -538,13 +468,6 @@
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
         opacity: 100%;
-      }
-    }
-  }
-  .hover\:cursor-pointer {
-    &:hover {
-      @media (hover: hover) {
-        cursor: pointer;
       }
     }
   }
@@ -562,79 +485,109 @@
       }
     }
   }
-  .sm\:visible {
-    @media (width >= 40rem) {
-      visibility: visible;
-    }
-  }
-  .sm\:fixed {
-    @media (width >= 40rem) {
+  .md\:fixed {
+    @media (width >= 48rem) {
       position: fixed;
     }
   }
-  .sm\:relative {
-    @media (width >= 40rem) {
-      position: relative;
-    }
-  }
-  .sm\:top-auto {
-    @media (width >= 40rem) {
+  .md\:top-auto {
+    @media (width >= 48rem) {
       top: auto;
     }
   }
-  .sm\:bottom-0 {
-    @media (width >= 40rem) {
+  .md\:bottom-0 {
+    @media (width >= 48rem) {
       bottom: calc(var(--spacing) * 0);
     }
   }
-  .sm\:m-0 {
-    @media (width >= 40rem) {
+  .md\:bottom-2 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 2);
+    }
+  }
+  .md\:bottom-3 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 3);
+    }
+  }
+  .md\:bottom-4 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 4);
+    }
+  }
+  .md\:m-0 {
+    @media (width >= 48rem) {
       margin: calc(var(--spacing) * 0);
     }
   }
-  .sm\:m-2 {
-    @media (width >= 40rem) {
-      margin: calc(var(--spacing) * 2);
-    }
-  }
-  .sm\:m-3 {
-    @media (width >= 40rem) {
+  .md\:m-3 {
+    @media (width >= 48rem) {
       margin: calc(var(--spacing) * 3);
     }
   }
-  .sm\:m-4 {
-    @media (width >= 40rem) {
-      margin: calc(var(--spacing) * 4);
+  .md\:mx-auto {
+    @media (width >= 48rem) {
+      margin-inline: auto;
     }
   }
-  .sm\:mt-6 {
-    @media (width >= 40rem) {
+  .md\:mt-6 {
+    @media (width >= 48rem) {
       margin-top: calc(var(--spacing) * 6);
     }
   }
-  .sm\:block {
-    @media (width >= 40rem) {
+  .md\:block {
+    @media (width >= 48rem) {
       display: block;
     }
   }
-  .sm\:inline {
-    @media (width >= 40rem) {
+  .md\:flex {
+    @media (width >= 48rem) {
+      display: flex;
+    }
+  }
+  .md\:hidden {
+    @media (width >= 48rem) {
+      display: none;
+    }
+  }
+  .md\:inline {
+    @media (width >= 48rem) {
       display: inline;
     }
   }
-  .sm\:bg-transparent {
-    @media (width >= 40rem) {
+  .md\:w-fit {
+    @media (width >= 48rem) {
+      width: fit-content;
+    }
+  }
+  .md\:flex-col {
+    @media (width >= 48rem) {
+      flex-direction: column;
+    }
+  }
+  .md\:bg-transparent {
+    @media (width >= 48rem) {
       background-color: transparent;
     }
   }
-  .sm\:p-0 {
-    @media (width >= 40rem) {
+  .md\:p-0 {
+    @media (width >= 48rem) {
       padding: calc(var(--spacing) * 0);
     }
   }
-  .md\:relative {
+  .md\:p-3 {
     @media (width >= 48rem) {
-      position: relative;
+      padding: calc(var(--spacing) * 3);
+    }
+  }
+  .md\:p-4 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 4);
+    }
+  }
+  .md\:pt-6 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 6);
     }
   }
 }
@@ -642,6 +595,21 @@
   html {
     scroll-behavior: smooth;
   }
+}
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
 }
 @property --tw-rotate-x {
   syntax: "*";
@@ -662,6 +630,48 @@
 @property --tw-skew-y {
   syntax: "*";
   inherits: false;
+}
+@property --tw-gradient-position {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-via {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-to {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-via-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 0%;
+}
+@property --tw-gradient-via-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 50%;
+}
+@property --tw-gradient-to-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 100%;
 }
 @property --tw-leading {
   syntax: "*";
@@ -728,18 +738,26 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-ease {
-  syntax: "*";
-  inherits: false;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-translate-x: 0;
+      --tw-translate-y: 0;
+      --tw-translate-z: 0;
       --tw-rotate-x: initial;
       --tw-rotate-y: initial;
       --tw-rotate-z: initial;
       --tw-skew-x: initial;
       --tw-skew-y: initial;
+      --tw-gradient-position: initial;
+      --tw-gradient-from: #0000;
+      --tw-gradient-via: #0000;
+      --tw-gradient-to: #0000;
+      --tw-gradient-stops: initial;
+      --tw-gradient-via-stops: initial;
+      --tw-gradient-from-position: 0%;
+      --tw-gradient-via-position: 50%;
+      --tw-gradient-to-position: 100%;
       --tw-leading: initial;
       --tw-font-weight: initial;
       --tw-blur: initial;
@@ -756,7 +774,6 @@
       --tw-drop-shadow-alpha: 100%;
       --tw-drop-shadow-size: initial;
       --tw-duration: initial;
-      --tw-ease: initial;
     }
   }
 }
